--- a/SymLinkCreator.dproj
+++ b/SymLinkCreator.dproj
@@ -62,13 +62,14 @@
         <DCC_Namespace>System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <BT_BuildType>Debug</BT_BuildType>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-        <VerInfo_Keys>CompanyName=A&amp;AP Programmer Group;FileDescription=$(MSBuildProjectName);FileVersion=1.1.0.0;InternalName=SynLinkCreator;LegalCopyright=A&amp;AP;LegalTrademarks=A&amp;AP;OriginalFilename=SymLinkCreator;ProductName=$(MSBuildProjectName);ProductVersion=1.1.0.0;Comments=Symbolic link file creator;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=A&amp;AP Programmer Group;FileDescription=Symbolic Link file Creator;FileVersion=1.3.2.0;InternalName=SynLinkCreator;LegalCopyright=A&amp;AP;LegalTrademarks=A&amp;AP;OriginalFilename=SymLinkCreator;ProductName=SynLinkCreator;ProductVersion=1.3.2.0;Comments=Symbolic link file creator;ProgramID=Embarcadero 10.3</VerInfo_Keys>
         <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
         <Icon_MainIcon>link.ico</Icon_MainIcon>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
-        <UWP_DelphiLogo44>inons\link_44.png</UWP_DelphiLogo44>
-        <UWP_DelphiLogo150>inons\link_150.png</UWP_DelphiLogo150>
-        <VerInfo_MinorVer>1</VerInfo_MinorVer>
+        <UWP_DelphiLogo44>images_archive\Link\link_64x64.png</UWP_DelphiLogo44>
+        <UWP_DelphiLogo150>images_archive\Link\link_150x150.png</UWP_DelphiLogo150>
+        <VerInfo_MinorVer>3</VerInfo_MinorVer>
+        <VerInfo_Release>2</VerInfo_Release>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win64)'!=''">
         <Icon_MainIcon>Filelist_Icon1.ico</Icon_MainIcon>
@@ -84,7 +85,7 @@
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-        <VerInfo_Keys>CompanyName=A&amp;AP Programmer Group;FileDescription=Simbolic Links Creator;FileVersion=1.3.1.2;InternalName=SymLinkCreator;LegalCopyright=A&amp;AP;LegalTrademarks=A&amp;AP;OriginalFilename=SymLinkCreator.exe;ProductName=$(MSBuildProjectName);ProductVersion=1.3.1.2;Comments=Symbolic Links Creator;ProgramID=Embarcadero RAD 10.3</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=A&amp;AP Programmer Group;FileDescription=Simbolic Links Creator;FileVersion=1.3.2.0;InternalName=SymLinkCreator;LegalCopyright=A&amp;AP;LegalTrademarks=A&amp;AP;OriginalFilename=SymLinkCreator.exe;ProductName=$(MSBuildProjectName);ProductVersion=1.3.2;Comments=Symbolic Links Creator;ProgramID=Embarcadero RAD 10.3</VerInfo_Keys>
         <VerInfo_MinorVer>3</VerInfo_MinorVer>
         <Icon_MainIcon>SymLinkCreator_Icon3.ico</Icon_MainIcon>
         <UWP_DelphiLogo44>images_archive\Link\link_64x64.png</UWP_DelphiLogo44>
@@ -92,8 +93,7 @@
         <UWP_DelphiLogo150>images_archive\Link\link_150x150.png</UWP_DelphiLogo150>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Release>1</VerInfo_Release>
-        <VerInfo_Build>2</VerInfo_Build>
+        <VerInfo_Release>2</VerInfo_Release>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
